--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -3,12 +3,16 @@
   "robotLength": 0.606425,
   "holonomicMode": true,
   "pathFolders": [
-    "New Folder"
+    "Blue Paths",
+    "Red Paths"
   ],
-  "autoFolders": [],
-  "defaultMaxVel": 3.0,
-  "defaultMaxAccel": 3.0,
-  "defaultMaxAngVel": 687.55,
-  "defaultMaxAngAccel": 720.0,
+  "autoFolders": [
+    "Blue Autos",
+    "Red Autos"
+  ],
+  "defaultMaxVel": 4.5,
+  "defaultMaxAccel": 1.0,
+  "defaultMaxAngVel": 600.0,
+  "defaultMaxAngAccel": 200.0,
   "maxModuleSpeed": 4.5
 }
